layout shift fixed

--- a/components/cast/cast.module.css
+++ b/components/cast/cast.module.css
@@ -5,7 +5,8 @@
     align-items: flex-start;
     gap: .5rem;
     flex-wrap: wrap;
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
 .castContainer
