--- a/components/modal/modal.module.css
+++ b/components/modal/modal.module.css
@@ -7,6 +7,11 @@
     background: rgba(8, 8, 8, 0.7);
 }
 
+.reactPlayer
+{
+    width: 100%;
+}
+
 .videoContainer
 {
     display: flex;
