--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,10 +17,8 @@
 html,
 body
 {
-  overflow-x: hidden;
   background-color: rgb(0, 0, 0);
   color: white;
-  padding: 0;
 }
 
 a
